# text-generation-webui-uv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  settings-template.yaml
